--- a/css/style.css
+++ b/css/style.css
@@ -301,6 +301,7 @@ h1, h2, h3, h4, h5, h6, figure {
   background-repeat: no-repeat;
   position: relative;
   width: 100%;
+  background-position: center;
 }
 .fh5co-cover .overlay {
   z-index: 0;
@@ -315,11 +316,21 @@ h1, h2, h3, h4, h5, h6, figure {
   position: relative;
   z-index: 10;
 }
-@media screen and (max-width: 768px) {
+
+@media screen and (max-width: 920px) {
   .fh5co-cover {
     height: 600px;
+    background-position: center !important;
   }
 }
+
+@media screen and (max-width: 450px) {
+  .fh5co-cover {
+    height: 600px;
+    background-position: 65% 0px !important;
+  }
+}
+
 .fh5co-cover .display-t,
 .fh5co-cover .display-tc {
   height: 900px;
@@ -942,7 +953,7 @@ form label {
   display: inline-block;
   width: 100px;
   height: 100px;
-  background: rgba(241, 78, 149, 0.8);
+  background: rgba(150, 150, 150, 0.26);
   margin: 0 4px;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
